[gd_scene load_steps=7 format=2]

[ext_resource path="res://enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://fonts/Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://enemies/bizky/graphics/bizky_resized.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.5, 9 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="Animation" id=1]
resource_name = "hit"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 1 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.33, 0.33 )
frames = SubResource( 2 )
animation = "walk"

[node name="IATimer" type="Timer" parent="."]
wait_time = 0.5

[node name="HitAnimation" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 1 )

[node name="StunTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DamageLabel" type="Label" parent="."]
margin_left = -4.0
margin_top = -17.0
margin_right = 4.0
margin_bottom = -7.0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1

[node name="ShowTimer" type="Timer" parent="DamageLabel"]
one_shot = true

[node name="Tween" type="Tween" parent="DamageLabel"]

[connection signal="timeout" from="IATimer" to="." method="_on_IATimer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="DamageLabel/ShowTimer" to="." method="_on_ShowTimer_timeout"]
